<resources>
    <string name="app_name">Buk!per</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Transax</string>
    <string name="nav_header_subtitle">Manage your sales account with Ease</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="daily_transactions">Daily Sales</string>
    <string name="debts">My Debtors</string>
    <string name="balance_sheet">Calculate Balance Sheet</string>
    <string name="share">Share</string>
    <string name="my_shopping_list">My Shopping List</string>

    <string name="income">Income: </string>
    <string name="expense">Expense: </string>
    <string name="pay_date">Pay Date: </string>
    <string name="contact">Contact: </string>
    <string name="amount">Amount: </string>
    <string name="name">Name: </string>
    <string name="msg_no_notes">+ Create New</string>
    <string name="new_list_title">Create new</string>
    <string name="edit_list_title">Edit</string>
    <string name="new_debt_title">Create New Debt</string>
    <string name="new_transaction_title">Create new Daily Transaction</string>

    <string name="warningAlert">This action cannot be undone</string>
    <string name="delete">Delete</string>
    <string name="deleteRequest">Are you sure you want to Delete?</string>
    <string name="validation">Please fill all the fields</string>
    <string name="warning">Warning!</string>
    <string name="truncated">the data has been deleted</string>
    <string name="registeredOn">Registered On:</string>
    <string name="transDate">Transaction for:</string>
    <string name="callFail">Could not Make call</string>
    <string name="save">Created Succesfully</string>
    <string name="updated">Updated Sucessfully</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bsheet_dialog_title">Generate sheet for:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="total_income">Total Income</string>
    <string name="total_expense">Total Expenditure:</string>
    <string name="profit">Sales Profit</string>
    <string name="percent_profit">% Profit</string>
    <string name="days">Number of transactions: </string>
    <string name="Loss">Sales Loss</string>
    <string name="saveData">Save this Sheet in Storage</string>
    <string name="loans">My Loans</string>
    <string name="total_owed">Total owed:</string>
    <string name="total_owing">Total Owing: </string>

    <string name="send_msg_request">Are you sure the debt has been paid?</string>
    <string name="send_msg">A message will be sent to the debtor and you will be charged</string>
    <string name="no">NO</string>
    <string name="send">Send</string>
    <string name="confirm">Confirm</string>
    <string name="ad_banner_id_test">ca-app-pub-9711324674477451/1833543072</string>
    <!--<string name="interstitial_id">ca-app-pub-9711324674477451/8603019455</string>-->
    <string name="interstitial_id">ca-app-pub-9711324674477451/8603019455</string>
    <string name="home">Home</string>
    <!--<string name="ad_banner_id_test">ca-app-pub-3940256099942544/6300978111</string>-->
</resources>
