<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/timestamp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="5dp"
                android:text="@string/registeredOn"
                android:textColor="@color/note_list_text"/>
            <TextView
                android:id="@+id/timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/timestamp"
                android:textColor="@color/timestamp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
               android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_weight="2"
                android:textSize="@dimen/card_data" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_weight="2"
                android:layout_marginRight="5dp"
                android:text="@string/amount"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/card_data" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/contact"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_weight="2"
                android:textSize="@dimen/card_data" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/pay_date"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/duedate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/card_data" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>