<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    android:background="@color/timestamp"
    android:layout_margin="5dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:id="@+id/text7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/timestamp"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_marginRight="5dp"
                android:text="@string/transDate"
                android:textColor="@color/note_list_text"/>
            <TextView
                android:id="@+id/timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/timestamp"
                android:textColor="@color/timestamp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/income"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/income_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/expense"
                android:textColor="@color/note_list_text"
                android:textSize="@dimen/card_data" />

            <TextView
                android:id="@+id/expense_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>