<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BalanceSheetFragment"
    android:layout_margin="5dp"
    android:padding="5dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="BalanceSheet"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/lbl_new_note_title" />

    <android.support.v7.widget.CardView
        android:id="@+id/bsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:visibility="gone"
        android:padding="@dimen/dimen_10"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="Transactions Obtained:"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/dimen_10"
                android:textSize="@dimen/lbl_new_note_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/from"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="@string/to"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:gravity="right"
                    android:layout_weight="1"
                    android:text="@string/days"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                android:text="Analysis"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/lbl_new_note_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/total_income"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/total_income"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/total_expense"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/total_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/profit"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/percent_profit"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/percent_profit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:text="@string/Loss"
                    android:textColor="@color/note_list_text"
                    android:textSize="@dimen/card_data" />

                <TextView
                    android:id="@+id/loss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/timestamp"
                    android:textSize="@dimen/card_data" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/downloadBtn"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_below="@id/bsheet"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="102dp"
        android:visibility="gone"
        android:background="@color/colorAccent"
        android:shadowColor="@color/hint_enter_note"
        android:text="@string/saveData"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/empty_data_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_no_notes"
        android:fontFamily="sans-serif-light"
        android:text="@string/msg_no_notes"
        android:textColor="@color/msg_no_notes"
        android:textSize="@dimen/msg_no_notes" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/createBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="40dp"
        android:src="@android:drawable/ic_input_add" />


</RelativeLayout>